--- a/app/src/main/res/layout/item_dosen.xml
+++ b/app/src/main/res/layout/item_dosen.xml
@@ -1,29 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="?android:attr/listPreferredItemHeight"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="10dip">
 
     <TextView
-        android:id="@+id/tv_nik"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_namadosen"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tv_nama_dosen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp" />
-
-    <TextView
-        android:id="@+id/tv_jabatan_akademik"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android.textSize="14sp"
-        tools:ignore="MissingPrefix" />
-
+        android:layout_margin="8dp"
+        android:textColor="@android:color/black"
+        android:textSize="16sp" />
 </LinearLayout>
